[package]
name = "bwapi-sys"
version = "0.1.0"
authors = ["Dmitry Kashitsyn <korvin@deeptown.org>", "Roman Proskuryakov <humbug@deeptown.org>"]
keywords = ["starcraft", "broodwar", "api", "binding", "ffi"]
repository = "https://github.com/RnDome/bwapi-sys"
description = "FFI bindings to the bwapi-c library"
license = "Unlicense/MIT"

[dependencies]

[build-dependencies]
curl = "0.4"
flate2 = "0.2"
tar = "0.4"
