[package]
name = "bwapi-sys"
version = "0.1.0"
authors = ["Dmitry Kashitsyn <korvin@deeptown.org>", "Roman Proskuryakov <humbug@deeptown.org>"]
keywords = ["starcraft", "broodwar", "api", "binding", "ffi"]
repository = "https://github.com/RnDome/bwapi-sys"
description = "FFI bindings to the bwapi-c library"
license = "Unlicense/MIT"
links = "BWAPIC"
build = "build.rs"

[build-dependencies]
reqwest = "0.6"
flate2 = "0.2"
tar = "0.4"
